--- a/resources/vsaccr/lang/en_us.lang
+++ b/resources/vsaccr/lang/en_us.lang
@@ -142,11 +142,11 @@ vsaccr.tips.121=
 vsaccr.tips.122=
 vsaccr.tips.123=
 vsaccr.tips.124=
-vsaccr.tips.125=
+vsaccr.tips.125=In September 2020, Canoe Studios celebrated its first anniversary. This year has been a journey akin to drifting on a river of challenges and opportunities. The name “Canoe” embodies our spirit of cooperation and determination, as we paddle together towards a brighter future. Throughout this passionate voyage, we’ve pushed boundaries, embraced innovation, and aimed to share a unique perspective of Canoe Studios through exceptional gaming experiences with players.
 vsaccr.tips.126=
 vsaccr.tips.127=
 vsaccr.tips.128=
-vsaccr.tips.129=
+vsaccr.tips.129=Endless Matryoshka Modpack
 vsaccr.tips.130=
 vsaccr.tips.131=
 vsaccr.tips.132=
@@ -154,7 +154,7 @@ vsaccr.tips.133=
 vsaccr.tips.134=
 vsaccr.tips.135=
 vsaccr.tips.136=
-vsaccr.tips.137=
+vsaccr.tips.137=At Canoe Studios, every failure has been a stepping stone on our path forward, while the players’ unwavering expectations serve as the driving force propelling us ahead. Through these trials and tribulations, we’ve honed our focus and dedication, continually pushing our boundaries to craft a more perfect gaming experience for our players.
 vsaccr.tips.138=
 vsaccr.tips.139=
 vsaccr.tips.140=
