--- a/resources/vsaccr/lang/zh_tw.lang
+++ b/resources/vsaccr/lang/zh_tw.lang
@@ -1,5 +1,10 @@
-vsaccr.item.guide.name=§cVirtual Survival Climate & Adventure§b§o手冊
-vsaccr.item.guide.subtitle=入门必读Virtual Survival Climate & Adventure參考手冊
+#由於台灣用語差異 故部分物品使用英文顯示，如果你想參加正式譯名，歡迎！
+
+
+
+
+vsaccr.item.guide.name=§c生存·起源與未來§b§o手冊
+vsaccr.item.guide.subtitle=入门必读生存·起源與未來參考手冊
 
 
 #自訂事件
@@ -19,7 +24,7 @@ vsaccr.tconstruct.tool_trait.pinkyTrait.name=粉嫩
 
 
 
-#匠魂材料
+#Tic 材料
 vsaccr.tconstruct.material.sakura_diamond.name=櫻色鑽石
 vsaccr.tconstruct.material.ender_biotite.name=終界雲母
 vsaccr.tconstruct.material.diamond.name=鑽石
@@ -31,161 +36,160 @@ vsaccr.tconstruct.material.pumpkin.name=南瓜
 
 
 #提示
-vsaccr.tips.1=這個包是基於 Greedycraft 一代版本 ，也被稱爲 Greedycraft Lite modpack .
+vsaccr.tips.1=這個包是基於 Greedycraft 一代版本 ，也被稱爲 Greedycraft Lite modpack . 但完全是參考。
 vsaccr.tips.2=你可以將所有獲得的新材料都丟進冶煉爐裡，看看會不會產生新的合金。
 vsaccr.tips.3=按住~鍵可以快速挖礦或砍樹！不僅如此，就連石頭也能快速挖掘，不過也會快速消耗工具耐久和飢餓值。
 vsaccr.tips.4=若要丟出物品，請按小鍵盤上的「/」按鈕。
 vsaccr.tips.5=匠魂的冶煉爐是個製造合金的好東西，如果你礦物夠多的話，別拿各種粉合成了。冶煉爐可以直接澆鑄出礦物塊。
 vsaccr.tips.6=匠魂冶煉爐建議做得越大越好。
 vsaccr.tips.3=/dank/null是個好東西，下礦再也不用擔心物品欄滿了。
-vsaccr.tips.4=如果你懶得造房子，你可以尋找村莊或者在HEI裡搜索@Prefab來瞬間建造房屋！
-vsaccr.tips.5=记得在末地传送门旁边放一个路径石，这很有用。
-vsaccr.tips.6=在空中搭路或者建造东西时，第一人称视角更便于操作。
-vsaccr.tips.7=难度上升时，Boss的血量并不会上升太多。注意有些Boss的血量是固定的。
-vsaccr.tips.8=无尽块块块可以当作信标底座！
-vsaccr.tips.9=你可以在HEI菜单中输入@FTBQuests来查看一些对你做任务有帮助的物品！
-vsaccr.tips.10=你还没有得到无尽块块块块块块块块块块块吗？真是遗憾。
-vsaccr.tips.11=警告：不要在家玩神秘，别怪我没提醒你。
-vsaccr.tips.12=使用lonelywjx作为用户名离线登录可以得到希团队的作者的皮肤...
-vsaccr.tips.13=夜晚，偶尔会有流星划过天空，在它们降落的地方可以发现惊喜！
-vsaccr.tips.14=请佩戴耳机以获得最佳游戏体验。不带也行。
-vsaccr.tips.15=到地下挖矿时记得带上船，因为地下的溶洞实在是太大了。
-vsaccr.tips.16=召唤凋灵时，请确保周围没有方块，尤其是雪和高草一类的方块容易被忽视。
-vsaccr.tips.17=使用/purge命令可以清理所有掉落物品，这可能有助于提高性能，尤其是在跑图过程中，因为生成区块时会生成大量掉落物。
-vsaccr.tips.18=把家建在生物群系的交界处或许是个好主意，你可以方便地养不同环境需求的蜜蜂。
-vsaccr.tips.19=如果你的存档无法加载，请恢复至最近的备份！
-vsaccr.tips.20=你可以将机会方块摆成3*3*3的大立方体获得一个超大的机会方块！奖励和惩罚都很大！（警告：不要在家附近搞这个）
-vsaccr.tips.21=盔甲的减伤机制进行了一些更改，现在即使是皮革盔甲也比没盔甲好很多！
-vsaccr.tips.22=各种怪物随着难度增强而变强。
-vsaccr.tips.23=用萤石搭建一个框架，在里面倒一桶水，开始你的天境之旅吧！
-vsaccr.tips.24=精英怪的出现几率和等级会随着难度而不断增加！
-vsaccr.tips.25=你可以轻松地越过栏杆，但是怪物不能！
-vsaccr.tips.26=请注意：尽管大部分怪物都不会破坏地形，但是凋灵和末影龙可以！所以召唤凋灵的时候请离你的家远远的。
+vsaccr.tips.4=果你懶得造房子，你可以尋找村莊，或者在HEI裡搜尋 @Prefab，來瞬間建造房屋！
+vsaccr.tips.5=請記得在終界傳送門旁放置一塊路徑石，這將會非常有幫助。
+vsaccr.tips.6=在空中搭建道路或者進行建造時，使用第一人稱視角將更有利於操作。
+vsaccr.tips.7=在難度提升時，Boss的生命值並不會增加太多。請注意，有些Boss的生命值是固定的。
+vsaccr.tips.8=無盡方塊可以當作信標底座！
+vsaccr.tips.9=你可以在HEI菜單中輸入 @FTBQuests 來查看一些對你執行任務有幫助的物品！
+vsaccr.tips.10=你還沒有獲得無盡方塊嗎？真是可惜。
+vsaccr.tips.11=警告：不要在家裡玩神祕，別怪我沒有提醒你。
+vsaccr.tips.12=遊玩舊版本確實是獨木舟工作室的黑歷史。
+vsaccr.tips.13=夜晚，偶爾會有流星劃過天空，它們降落的地方可能會帶來驚喜！
+vsaccr.tips.14=請佩戴耳機以獲得最佳遊戲體驗。不佩戴也可以。
+vsaccr.tips.15=到地下挖礦時記得小心岩漿，因為地下的熔岩湖實在是太大了。
+vsaccr.tips.16=召喚凋靈時，請確保周圍沒有方塊，尤其是雪和高草一類的方塊容易被忽略。
+vsaccr.tips.17=使用 /purge 命令可以清理所有掉落物品，這可能有助於提高效能，尤其是在跑圖過程中，因為生成區塊時會生成大量掉落物。
+vsaccr.tips.18=把家建在生物群系的交界處建立家園可能是個不錯的主意，這樣你可以方便地養殖不同環境需求的蜜蜂。
+vsaccr.tips.19=如果你的存檔無法載入，請在資料夾內的 Save 資料夾使用你最近的存檔解壓縮恢復。
+vsaccr.tips.20=熱情將原始時代引向未來時代。
+vsaccr.tips.21=盔甲的減傷機制進行了一些更改，現在即使是皮革盔甲也比沒有盔甲好很多！
+vsaccr.tips.22=各種怪物會根據你的進度變得更強大。
+vsaccr.tips.23=使用萤石搭建一個框架，在其中倒一桶水，開始你的天境之旅吧！
+vsaccr.tips.24=精英怪的出現機率和等級會隨著難度不斷增加！
+vsaccr.tips.25=你可以輕鬆地越過欄杆，但怪物不能！
+vsaccr.tips.26=請注意：雖然大部分怪物都不會破壞地形，但凋零和終界龍可以！所以召喚時請遠離你的家。
 vsaccr.tips.27=本模組包沒有任何反作弊！只有 Mod 探測機制哦。
-vsaccr.tips.28=小心随处可见的精英怪！它们往往非常强力，有的甚至会用原力把你拉过去！
-vsaccr.tips.29=在物品栏界面可以打开任务菜单，它会告诉你游戏流程，做完这些任务还有丰厚的奖励，不要忘了领取！
-vsaccr.tips.30=你可以站在树叶上走行，但是会降低你的移动速度。
-vsaccr.tips.31=你潜行时的高度仅有1.5格，可以通过三个半砖高的洞。(真太像高版本机制了)
-vsaccr.tips.32=无尽装备是一种极其坚硬的材料，不过它也是最破坏平衡性的一种材料...
-vsaccr.tips.33=试试钓鱼吧，你可以钓到很多新东西。
-vsaccr.tips.34=由于HEI无法支持拼音搜索，可以用HECI代替。
-vsaccr.tips.35=你打的末影龙和凋零越多，它们就会变得越强！
-vsaccr.tips.36=想在大白天睡觉吗？做一个吊床吧！
-vsaccr.tips.37=包含了高版本机制的整合包，你心动了没有？
-vsaccr.tips.38=§b我加入这条信息只是想看看提示能不能变成彩色。
-vsaccr.tips.39=请不要执着于附魔和原版武器，匠魂是该整合包的核心玩法之一。
-vsaccr.tips.40=伪装板没有这么用的，你在HEI也不会查到伪装板。
+vsaccr.tips.28=小心隨處可見的精英怪！它們往往非常強大，有的甚至會用原力把你拉過去！
+vsaccr.tips.29=在物品欄界面可以打開任務菜單，它會告訴你遊戲流程，完成這些任務還有豐厚的獎勵，不要忘記領取！
+vsaccr.tips.30=你可以站在樹葉上行走，但會降低你的移動速度。
+vsaccr.tips.31=你潛行時的高度僅有1.5格，可以通過三個半磚高的洞。(真太像高版本機制了)
+vsaccr.tips.32=無盡裝備是一種極其堅硬的材料，不過它也是最破壞平衡性的一種材料...
+vsaccr.tips.33=試試釣魚吧，你可以釣到很多新東西。
+vsaccr.tips.34=由於 HEI 無法支援拼音搜尋，你可以用 HECI 代替。
+vsaccr.tips.35=你打的終界龍和凋靈越多，它們就會變得越強！
+vsaccr.tips.36=想在大白天睡覺嗎？做一個吊床吧！
+vsaccr.tips.37=包含了高版本機制的模組包，你心動了沒有？
+vsaccr.tips.38=§b我加入這條信息只是想看看提示能不能變成彩色。
+vsaccr.tips.39=生存吧，相信你能存活。
+vsaccr.tips.40=偽裝板沒有這樣的用法，你在HEI也不會查到偽裝板。
 vsaccr.tips.41=不要嘗試加載作弊 Mod，會被 Mod 反作弊制裁的。
-vsaccr.tips.42=如果你想来点挑战性，去打怪物吧。
-vsaccr.tips.43=终极精华是一个很不错的匠魂材料，如果你能快速生长作物的话就不难获得。
-vsaccr.tips.44=给你的镐上装一个阿迪特部件可以极大延长它的使用时间，如果你有耐久3的话也许能达到无限耐久。
-vsaccr.tips.45=把家建在腐蚀之地是个坏主意。
-vsaccr.tips.46=吃不同种类的食物来提升生命值！多方块厨房或许能帮到你。
-vsaccr.tips.47=据说来自两个不同mod的背包可以无限套娃...
-vsaccr.tips.48=传送卷轴可以让你在任何地方到达激活的路径石，但是只能用一次！传送石可以无限使用，但是有冷却时间！
-vsaccr.tips.49=使用方向键可以调整越肩视角的相机角度和位置。
-vsaccr.tips.50=有些矿物太稀有？试着把它们种出来！
-vsaccr.tips.51=一般情况的下，你要多看§c虚拟生存·气候控制重制版 §b§o从入门到精通书，你不看我也没有办法。
-vsaccr.tips.52=原版的食物遭到了削弱，你应该用厨房制作更高级的食物。
-vsaccr.tips.53=不要担心踩坏耕地，它们现在踩不坏了。
-vsaccr.tips.54=找不到末地城？你可以合成一个鞘翅！虽然材料非常昂贵。
-vsaccr.tips.55=如果你有一大堆地牢战利品无处可用，你可以扔了。或许可以保留东西是不错的选择
-vsaccr.tips.56=转换桌只需要肝，就能做出来超稀有的转化桌。
-vsaccr.tips.57=贤者之石你只需要肝，就能做出来肝帝的贤者之石。
-vsaccr.tips.58=为什么Lonelywjx经常咕咕。
-vsaccr.tips.59=原版修复是没有了，但是loliasm已经集成原版修复了xd。
-vsaccr.tips.60=多做匠魂材料工具，混合合成，效果不同。
-vsaccr.tips.61=做一个钩爪吧！你就可以飞檐走壁了。
-vsaccr.tips.62=有些匠魂材料会提供负面效果，但是有时候，这些效果是挖掘到更好矿物所必需的。
+vsaccr.tips.42=如果你想增加點挑戰，去打怪物吧。
+vsaccr.tips.43=終極精華是一個很不錯的匠魂材料，如果你能快速生長作物的話就不難獲得。
+vsaccr.tips.44=給你的鎬上裝一個阿迪特部件可以極大延長它的使用時間，如果你有耐久3的話也許能達到無限耐久。
+vsaccr.tips.45=把家建在腐蝕之地是個壞主意。
+vsaccr.tips.46=吃不同種類的食物來提升生命值！多方塊廚房或許能幫到你。
+vsaccr.tips.47=據說來自多個材料可以無限鍛造。
+vsaccr.tips.48=傳送卷軸可以讓你在任何地方到達已啟用的路徑石，但只能使用一次！傳送石可以無限使用，但有冷卻時間！
+vsaccr.tips.49=使用方向鍵可以調整越肩視角的相機角度和位置。
+vsaccr.tips.50=有些礦物太稀有？試著種植出來吧！
+vsaccr.tips.51=壓縮空間是個好東西，允許你極大降低TPS。
+vsaccr.tips.52=原版的食物遭到了削弱，你應該使用廚房製作更高級的食物。
+vsaccr.tips.53=不用擔心踩壞耕地，它們現在不會被踩壞了。
+vsaccr.tips.54=找不到終界城？你可以合成一個翼膜！雖然材料非常昂貴。
+vsaccr.tips.55=若你有一大堆地牢戰利品無處可用，你可以丟了。或許保留東西是不錯的選擇。
+vsaccr.tips.56=轉換桌只需要肝，就能做出來超稀有的轉化桌。
+vsaccr.tips.57=賢者之石你只需要肝，就能做出來肝帝的賢者之石。
+vsaccr.tips.58=堅持集體利益是更好的選擇，獨立個人選擇會導致你發展極度緩慢！
+vsaccr.tips.59=集成某種模組的功能是好事，但會給你帶來不可預期的壞事。
+vsaccr.tips.60=多做匠魂材料工具，混合合成，效果會不同。
+vsaccr.tips.61=做一個鉤爪吧！你就可以飛檐走壁了。
+vsaccr.tips.62=有些匠魂材料會提供負面效果，但有時候，這些效果是挖掘到更好礦物所必需的。
 vsaccr.tips.63=使用4个腐肉可以合成皮革！
-vsaccr.tips.64=钩爪在末地非常好用，记得去末地之前一定要带上一个！
-vsaccr.tips.65=饰品可以具有前缀，前缀可以提供属性加成，你可以制造重锻站来消耗经验重铸饰品。
-vsaccr.tips.66=黑心商人给出的交易往往很诱人！但真的货真价实吗？
-vsaccr.tips.67=有一些怪物后期越来越强。
-vsaccr.tips.68=把菠萝放在披萨上是个坏主意。
-vsaccr.tips.69=囤积了大量的无用地牢战利品？你可以把它们扔了！
-vsaccr.tips.70=0匠魂工具和盔甲耐久度没了，你可以扔了，没用了！
-vsaccr.tips.71=射击时请瞄准怪物的头部，爆头可以造成更多伤害！当然，怪物也能爆头你。好的头盔可以减少或完全免除爆头的额外伤害。
-vsaccr.tips.72=在你进入过下界后主世界会有更高概率生成陨石，而在流星雨期间陨石的生成概率变得非常高。
-vsaccr.tips.73=打败末影龙后，你就有大量经验！。
-vsaccr.tips.74=等价交换和等价交换 扩展某些物品被魔改，你需要发展任务才能合成！
-vsaccr.tips.75=国内镜像和国际镜像不一样的，但是统国际版。
-vsaccr.tips.76=如果觉得末影人太难找，那你慢慢的找。
-vsaccr.tips.77=你知道吗，其实你基本上可以把某些东西用来做匠魂工具...
-vsaccr.tips.78=合成贤者之石需要烛魔！
-vsaccr.tips.79=地下偶尔会出现非常罕见的巨型矿脉。
-vsaccr.tips.80=随着难度的增加，你需要有更强的装备来打败！
-vsaccr.tips.81=路径石有时会在村庄生成，看到它们记得激活一下！
-vsaccr.tips.82=村民现在看上去和玩家一样，如果你让他们高兴的话也许会和你结婚生孩子？你可能需要一个结婚戒指。
-vsaccr.tips.83=如果你一直吃某种食物，它所提供的饥饿值就会越来越少，请寻求更丰富的食谱。
-vsaccr.tips.84=如果你使用AMD图形程序 ，请按F9把NVIDIA的true改为false。
-vsaccr.tips.85=虚拟生存更加现代了！bruh
-vsaccr.tips.86=其实这个整合包一半硬核一半休闲。合称半硬核半休闲。
-vsaccr.tips.87=你可以在HEI菜单启动超低内存模式，但是会降低搜索速度。
-vsaccr.tips.88=如果你99%不看教程。别怪我你发展怎么慢。
-vsaccr.tips.89=怪物装备是而在这一阶段取得进展也非常有成就感。
-vsaccr.tips.90=§3虚拟生存·气候控制重制版对原版食物机制进行了较大改进
-vsaccr.tips.91=以前版本转化桌难度非常很难合成，现在版本合成难度已经降低15%了。
-vsaccr.tips.92=你可能会遇到红哥的装备 不过这装备超稀有。
-vsaccr.tips.93=1.10.900之前版本没有温度系统，现在已经加入了。
-vsaccr.tips.94=1.10.900版本有国际版了？这是什么回事呢？
-vsaccr.tips.95=有些物品的提供温度是不同的。
-vsaccr.tips.96=我不是vsaccr的后代！！ 
-vsaccr.tips.97=试一试破坏机会方块吧，你将来成为富玩家。
-vsaccr.tips.98=不要试图利用mod的bug来破坏平衡性，(虽然我会修复的)
-vsaccr.tips.99=有些界面是英文的(对非英语国家极度不友好，如果你懂英文当我没说)
-vsaccr.tips.100=洞穴更新版本已经来袭啦！虽然bug很多。
-vsaccr.tips.101=整合包能优化就能优化了，不优化最起码要分配8G才能带动
-vsaccr.tips.102=魔种之咏在105a20b移除了。将成为历史版本了。
-vsaccr.tips.103=你可以合成混乱宝石，但不是纯净的混乱宝石，而是被污染的宝石。需要净化合成才能得到混乱宝石
-vsaccr.tips.104=虚拟生存复刻了高版本特性，更加提升可玩性!
-vsaccr.tips.105=虚拟生存是一个1.12.2钉子整合包！
-vsaccr.tips.106=使用tuijin可得到tuijin兽控的皮肤。
-vsaccr.tips.107=MCA是硬编码mod，无法本地化。zhu
-vsaccr.tips.108=你好，什么也没有，愚人节快乐:p
-vsaccr.tips.109=虚拟生存 气候与冒险服务端开服核心采用猫端，当然有另一个forge版的。
-vsaccr.tips.110=虚拟生存 气候与冒险是一种多种语言的整合包。
-vsaccr.tips.111=你需要学会自己的方法去排除污染物质或者排放物。
-vsaccr.tips.112=你可以使用某无限过滤器来过滤所有某排放物。
-vsaccr.tips.113=联动不同整合包非常多，可以无限套娃！
-vsaccr.tips.114=你可以加第三方资源包，但出问题别来找我！只支持特定的资源包。+.....
-vsaccr.tips.115=关掉光影的方法粗暴又简单的方法是直接删光影！
-vsaccr.tips.116=Lonelywjx曾说过:自己的团队独立是不可能的，hope team后来加入Canoe Studio了。这是一个喜事啊！
-vsaccr.tips.117=从所周知，Canoe Studio是大船吗？这有点许是吧？
-vsaccr.tips.118=混乱宝石没有特别用途，纯纯适用合成特殊材料而已。
-vsaccr.tips.119=梦源曾说过:Canoe Studio是我创始的，和Lonelyxiya一样是创始人，但由于会议立宪制逐渐出现，不能滥用权力了。
-vsaccr.tips.120=你可以进Discord获取更好的技术支持。
-vsaccr.tips.121=其实这个可以用核显带动 只不过有点卡而已 ，i3 4代标压。
-vsaccr.tips.122=鉴证成功，大轩锭是小轩锭
-vsaccr.tips.123=鉴证失败，云兮的DNA未知
-vsaccr.tips.124=半硬核半休闲的整合包，你值得拥有！
-vsaccr.tips.125=人被杀，就会死
-vsaccr.tips.126=矿物太少？使用通用机械mod来达成五倍产矿吧！
-vsaccr.tips.127=寰宇是一种极其坚硬的材料，不过它也是基本上所有最强力金属的合金...
-vsaccr.tips.128=首次击败原版Boss时难度会有所上升。
-vsaccr.tips.129=无限套娃的整合包！
-vsaccr.tips.130=村民是掠夺者的伪军。
-vsaccr.tips.131=大部分地上散落的东西都可以空手右键捡起！
-vsaccr.tips.132=一般方法种植的神秘农业作物不会掉落种子，建议制作一个有机灌注机多方块机器来处理精华作物。
-vsaccr.tips.133=不同mod的导线都是通用的！
-vsaccr.tips.134=各种怪物有时候会变成精英怪，获得各种种类的加成，遇到它们请小心。
-vsaccr.tips.135=有时候按键不同，具体请看Wiki
-vsaccr.tips.136=苦力怕铸模是一种很特殊的神秘人
-vsaccr.tips.137=小雨美术的技术还好，为整合包贡献了！
-vsaccr.tips.138=原版的食物遭到了削弱，你应该用厨房制作更高级的食物。
-vsaccr.tips.139=原版的部分东西都削弱了
-vsaccr.tips.140=找不到末地城？你可以合成一个鞘翅！虽然材料非常昂贵。
-vsaccr.tips.141=各种怪物有时候会变成精英怪，获得各种种类的加成，遇到它们请小心
-vsaccr.tips.142=使用方向键可以调整越肩视角的相机角度和位置。
-vsaccr.tips.143=做一个钩爪吧！你就可以飞檐走壁了。
-vsaccr.tips.144=试试钓鱼吧，你可以钓到很多新东西！
-vsaccr.tips.145=觉得建筑方块不够？用凿子！
-vsaccr.tips.146=洞穴更新物品有些不能用，不能用就不能用。
-vsaccr.tips.147=你可以试图建立殖民根据地。
-vsaccr.tips.148=极大真正的优化整合包，内存只要分配3G就完美带动，(需要8G运行内存而不是4G运行内存)
-vsaccr.tips.149=本整合包大部分是魔改内容的。
-vsaccr.tips.150=你只要赞助整合包作者，利益会获得永久！
-
+vsaccr.tips.64=鉤爪在終界非常好用，記得去終界之前一定要帶上一個！
+vsaccr.tips.65=飾品可以具有前綴，前綴可以提供屬性加成，你可以製造重鍛站來消耗經驗重鑄飾品。
+vsaccr.tips.66=黑心商人給出的交易往往很誘人！但真的貨真價實嗎？
+vsaccr.tips.67=有一些怪物後期越來越強。
+vsaccr.tips.68=把鳳梨放在披薩上是個壞主意。
+vsaccr.tips.69=囤積了大量的無用地牢戰利品？你可以把它們丟了！
+vsaccr.tips.70=匠魂工具與盔甲的耐久度已耗盡，您或許可考慮遺棄，已不復具實際效用！
+vsaccr.tips.71=進行射擊時請瞄準怪物的頭部，爆頭可以造成更多傷害！當然，怪物也可能會對你進行致命一擊。優良的頭盔能夠減少或甚至完全免除爆頭所帶來的額外傷害。
+vsaccr.tips.72=在你進入地獄後，主世界生成隕石的機率將會增加，而在流星雨期間，隕石的生成機率更是會變得非常高。
+vsaccr.tips.73=擊敗終界龍後，您將獲得豐富的經驗值！
+vsaccr.tips.74=等值交換和等值交換系統中某些物品的合成方式已被重新調整，您需要完成一系列任務來解鎖這些合成能力！
+vsaccr.tips.75=中國版本與國際版本的鏡像存在不同之處，但仍然屬於同一國際版。
+vsaccr.tips.76=如果您認為找尋終界人太困難，那麼您可以慢慢地尋找。
+vsaccr.tips.77=你們開心就是最好的了:)
+vsaccr.tips.78=合成賢者之石需要獨特的方法！
+vsaccr.tips.79=地底偶爾會出現非常罕見的巨型礦脈。
+vsaccr.tips.80=隨著難度的提升，您需要更強大的裝備來戰勝挑戰！
+vsaccr.tips.81=路徑石有時候會在村莊生成，如果看到它們，記得要激活一下！
+vsaccr.tips.82=村民現在看起來和玩家一樣，如果您讓他們高興的話，也許會和您結婚生孩子？您可能需要一個結婚戒指。
+vsaccr.tips.83=如果您持續食用某種食物，其所提供的飢餓值將會逐漸減少，請尋求更豐富的食譜。
+vsaccr.tips.84=NVIDIA 在使用模組包時提供最佳的相容性。
+vsaccr.tips.85=更加真實了。
+vsaccr.tips.86=實際上，這個模組包一半是硬核，一半是休閒。可以稱之為「半硬核半休閒」。
+vsaccr.tips.87=您可以在HEI菜單中啟用超低記憶體模式，但這會降低搜索速度。
+vsaccr.tips.88=如果您有99%的時間不閱讀教程，那就別怪我您的發展緩慢。
+vsaccr.tips.89=在這個階段取得怪物裝備的進展也是相當令人有成就感的。
+vsaccr.tips.90=§3生存·起源與未來對原版食物機制進行了相當大的改進。
+vsaccr.tips.91=在之前的版本中，轉換桌的合成難度非常高，而現在的版本已將合成難度降低了15%。
+vsaccr.tips.92=作為一名資深玩家，在這裡直接表現得不好。
+vsaccr.tips.93=在1.10.900之前的版本中沒有溫度系統，而現在已經被加入了。
+vsaccr.tips.94=1.10.900版本已經推出國際版了？這是怎麼回事呢？
+vsaccr.tips.95=某些物品的提供溫度是有所差異的。
+vsaccr.tips.96=我並不是 SOF 的後代！！
+vsaccr.tips.97=試著破壞方塊，你將來會成為富有的玩家。
+vsaccr.tips.98=不要嘗試利用模組的漏洞來破壞平衡性，（儘管我會修復的）。
+vsaccr.tips.99=有些界面是英文的（對非英語國家來說不太友好，如果您懂英文，就當我沒說過）。
+vsaccr.tips.100=洞穴更新版本已經來臨了！
+vsaccr.tips.101=整合包如果可以進行優化，就應該進行優化；如果不進行優化，至少需要分配8GB內存才能流暢運行。
+vsaccr.tips.102=Croparia 在版本 105a20b 被移除，將成為歷史版本。
+vsaccr.tips.103=您確實可以合成混亂寶石，但並不是純淨的混亂寶石。然而，您確定您知道如何使用它的用途嗎？
+vsaccr.tips.104=融合了高版本的特色，進一步提升了遊戲的可玩性！
+vsaccr.tips.105=玩法是來自興趣愛好，而非您需要去挑戰的。
+vsaccr.tips.106=財富是貪婪的根源。
+vsaccr.tips.107=原點來臨，但未來真的會離開嗎？
+vsaccr.tips.108=您好，甚麼都沒有，愚人節快樂！
+vsaccr.tips.109=“生存·起源與未來” 模組包使用 Forge 伺服端版本。
+vsaccr.tips.110=“生存·起源與未來” 是一種多種語言的模組包。
+vsaccr.tips.111=創始人進化到未來人，我相信你可以實現。
+vsaccr.tips.112=遇到問題不要只能靠螢幕擷取，需要描述+螢幕擷取+發生情境這樣會提高解析能力。
+vsaccr.tips.113=啥也沒有，別看了。
+vsaccr.tips.114=你可以載入第三方資源包，但出問題別來找我！只支援特定的資源包。
+vsaccr.tips.115=關閉光影的方法之一是使用粗暴且簡單的方式，直接刪除光影文件！
+vsaccr.tips.116=Lonelywjx曾經提到過："自己的團隊獨立是不可能的，Hope Team後來加入Canoe Studio了。這是一個喜事啊！"
+vsaccr.tips.117=根據我所知，Canoe Studio是一家大型工作室嗎？這似乎有一些合理性。
+vsaccr.tips.118=混亂寶石沒有特別的用途，純粹適用於合成特殊材料而已。
+vsaccr.tips.119=夢源曾經提到過："Canoe Studio是我創辦的，和Lonelyxiya一樣是創辦人，但由於會議立憲制逐漸出現，不能濫用權力了。"
+vsaccr.tips.120=請注意官網發布的資訊，防止受騙！
+vsaccr.tips.121=其實這可以透過內建顯示核心來驅動，只是效能可能稍微有些不足，這是搭載第四代標壓i3處理器的情況。
+vsaccr.tips.122=2022年開始進行國際版。
+vsaccr.tips.123=堅定意志是最好的遊戲生存基本操作。
+vsaccr.tips.124=半硬核半休閒的模組包，你值得擁有！
+vsaccr.tips.125=2020年9月，獨木舟工作室踏入了誕生一週年。這一年，宛如漂流在充滿挑戰與機會的創意之江。獨木舟工作室的名字寓意著我們同舟共濟，齊心協力，划向更遠的前程。在這個充滿激情的旅程中，我們不斷創新，勇攀高峰，希望透過精湛的遊戲體驗，與玩家們分享屬於獨木舟工作室的獨特視角。
+vsaccr.tips.126=礦物太少？使用通用機械模組來達成五倍產礦吧！
+vsaccr.tips.127=寰宇是一種極其堅硬的材料，不過它也是基本上所有最強力金屬的合金…
+vsaccr.tips.128=首次擊敗原版Boss時難度會有所提升。
+vsaccr.tips.129=無限套娃的模組包！
+vsaccr.tips.130=村民是劫掠者的偽軍。
+vsaccr.tips.131=大部分地上散落的東西都可以空手右鍵撿起！
+vsaccr.tips.132=一般方法種植的神秘農業作物不會掉落種子，建議製作一個有機注入器多方塊機器來處理精華作物。
+vsaccr.tips.133=不同模組的導線是通用的！
+vsaccr.tips.134=各種怪物有時候會變成精英怪，獲得各種不同種類的增益效果，遇到它們請小心。
+vsaccr.tips.135=有時候按鍵不同，詳細請參閱Wiki。
+vsaccr.tips.136=在獨木舟工作室，每次失敗是我們前進道路上的挑戰，而玩家的期望則是我們持續進步的動能。透過不斷的專注和努力，我們不斷嘗試突破自己，為玩家們締造出更加完美的遊戲體驗。
+vsaccr.tips.137=獨木舟工作室只是一個笑話的工作室。實際是不是的
+vsaccr.tips.138=原版的食物遭到了削弱，你應該使用廚房製作更高級的食物。
+vsaccr.tips.139=原版的部分東西都削弱了。
+vsaccr.tips.140=找不到終界城？你可以合成一個末影之翼！雖然材料非常昂貴。
+vsaccr.tips.141=各種怪物有時候會變成精英怪，獲得各種不同種類的增益效果，遇到它們請小心！
+vsaccr.tips.142=使用方向鍵可以調整肩越視角的相機角度和位置。
+vsaccr.tips.143=做一個鉤爪吧！你就可以飛檐走壁了。
+vsaccr.tips.144=試試釣魚吧，你可以釣到很多新東西！
+vsaccr.tips.145=覺得建築方塊不夠？用鑿子！
+vsaccr.tips.146=有1.18~1.13.2版本中的相關機制和物品。
+vsaccr.tips.147=Lonelyxiya 提過交流參考數據是更好的選擇結果。
+vsaccr.tips.148=極大真正優化模組包，記憶體只要3.5G只要給予3G就完美游玩。
+vsaccr.tips.149=本模組包使用 Crafttweaker 進行大量修改内容的。
+vsaccr.tips.150=Pyrotech 讓你成爲一種煩惱的模組，也是快樂的模組。
 
 
 
